<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/BMI" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBMI"
        android:layout_above="@+id/textResult"
        android:layout_alignLeft="@+id/btnReal"
        android:layout_alignStart="@+id/btnReal"
        android:layout_marginBottom="54dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real"
        android:id="@+id/btnReal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/textResult"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textBMI"
        android:layout_alignStart="@+id/textBMI" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:id="@+id/btnEnd"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textResult"
        android:layout_alignStart="@+id/textResult"
        android:layout_marginBottom="119dp" />

</RelativeLayout>
